[gd_scene load_steps=10 format=3 uid="uid://e6c12qv51vc0"]

[ext_resource type="Script" uid="uid://luhjla7rt5cp" path="res://systems/scripts/AptReseda.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dkb5elynujhwb" path="res://systems/scenes/locations/InventoryUI.tscn" id="2"]
[ext_resource type="Script" uid="uid://rlhvt3cb4wlm" path="res://systems/scripts/PorteReseda.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://pausemenu123" path="res://systems/scenes/locations/PauseMenu.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://4swxm8i7odxv" path="res://systems/scenes/locations/Player.tscn" id="5"]

[sub_resource type="BoxMesh" id="BoxMesh_1"]
size = Vector3(20, 0.2, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(20, 0.2, 20)

[sub_resource type="BoxMesh" id="BoxMesh_2"]
size = Vector3(2, 3, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_2"]
size = Vector3(0.5751953, 4.522949, 2.6277924)

[node name="AptReseda" type="Node3D"]
script = ExtResource("1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.04253147, -0.4016607, 0.91480035, -0.016560962, 0.9152197, 0.40261474, -0.9989579, -0.032273773, 0.032273747, 1.9632502, 4.4258857, 0.7896557)
size = 20.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 10, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("5")]
transform = Transform3D(-4.3711385e-08, 0, -0.99999994, 0, 1, 0, 0.99999994, 0, -4.3711385e-08, 0, 0, 0)

[node name="Floor" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("BoxMesh_1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_1")

[node name="ExitDoor" type="StaticBody3D" parent="." groups=["interactable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 1.5, 0)
script = ExtResource("3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ExitDoor"]
transform = Transform3D(-5.507121e-08, 0, 0.99999994, 0, 1.5979176, 0, -1.2598825, 0, -4.3711385e-08, -1.8011417, 0.8744941, 0)
mesh = SubResource("BoxMesh_2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ExitDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.6210728, 0.89982605, 0.024873137)
shape = SubResource("BoxShape3D_2")

[node name="Label3D" type="Label3D" parent="ExitDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.508441, 2.5315495, -0.051083088)
billboard = 1
text = "ðŸšª EXIT"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LabelInfo" type="Label" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 400.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 16
text = "Apt 4B - 2700 Saticoy St, Reseda, Los Angeles"

[node name="LabelInteraction" type="Label" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 18
text = "Click to move or interact"
horizontal_alignment = 1

[node name="PauseMenu" parent="." instance=ExtResource("4")]

[node name="InventoryUI" parent="." instance=ExtResource("2")]
